; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/wifi/iperf/components/iperf/extr_iperf.c_iperf_is_udp_client.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/wifi/iperf/components/iperf/extr_iperf.c_iperf_is_udp_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@s_iperf_ctrl = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@IPERF_FLAG_CLIENT = common dso_local global i32 0, align 4
@IPERF_FLAG_UDP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @iperf_is_udp_client to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iperf_is_udp_client() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @s_iperf_ctrl, i32 0, i32 0, i32 0), align 4
  %2 = load i32, i32* @IPERF_FLAG_CLIENT, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @s_iperf_ctrl, i32 0, i32 0, i32 0), align 4
  %7 = load i32, i32* @IPERF_FLAG_UDP, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br label %10

10:                                               ; preds = %5, %0
  %11 = phi i1 [ false, %0 ], [ %9, %5 ]
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
